Visual changes to pages.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
 	<body>
 		<main>
 			<h1>VibeCheck</h1>
+			<img src="/content/symbol.svg" alt="Vibey our smiley face icon." height="3.5vh">
 			<section>
-				<h2>Log In / Sign Up</h2>
-				<input type="email" id="email_input" placeholder="Email" />
-				<input type="password" id="password_input" placeholder="Password" />
-				<button id="login_button">Log In</button>
-				<button id="signup_button">Sign Up</button>
-				<p id="message_text"></p>
+				<h3>Log In / Sign Up</h3>
+				<div>
+					<input type="email" id="email_input" placeholder="Email" />
+					<input type="password" id="password_input" placeholder="Password" />
+				</div>
+					<button id="login_button">Log In</button>
+					<button id="signup_button">Sign Up</button>
+					<p id="message_text"></p>
 			</section>
 		</main>
 	<script src="scripts/auth.js"></script>
