Changed header and added SmileHistory frame.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
 	</head>
 	<body>
 		<header>
+			<div>
 			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
 			<h1>VibeCheck</h1>
-			<button commandfor="auth_box" command="show-modal">Log In / Sign Up</button>
-
+			</div>
+			<nav><button commandfor="auth_box" command="show-modal">Log In / Sign Up</button></nav>
 		</header>
 		<main>
 			<dialog id="auth_box" closedby="closerequest">
