--- a/dashboard.html
+++ b/dashboard.html
@@ -31,12 +31,49 @@
 		<meta property="og:image" content="https://vibecheck.ch/content/brand.png" />
 	</head>
 	<body>
+		<header>
+			<div>
+			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
+			<h1>VibeCheck</h1>
+			</div>
+			<nav><button id="logout_button">Log Out</button></nav>
+		</header>
 		<main>
 			<h1>VibeCheck</h1>
 			<section>
-				<h3>Dashboard</h3>
-				<button id="logout_button">Log Out</button>
-			</section>
+				<h3>SmileHistory</h2>
+				<div class="history">
+					<table>
+						<thead><th colspan="7">January</th></thead>
+						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
+						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">February</th></thead>
+						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
+						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">March</th></thead>
+						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
+						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+					</table>
+				</div>			</section>
 		</main>
 	<script src="scripts/auth.js"></script>
 	</body>
