Adding elements to the dashboard and fixing SmileHistory.

--- a/dashboard.html
+++ b/dashboard.html
@@ -39,9 +39,16 @@
 			<nav><button id="logout_button">Log Out</button></nav>
 		</header>
 		<main>
-			<h1>VibeCheck</h1>
 			<section>
-				<h3>SmileHistory</h2>
+				<h3>DailyVibe</h3>
+				<button>Submit</button>
+			</section>
+			<section>
+				<h3>HappinessHelp</h3>
+				<p>Do something fun today!</p>
+			</section>
+			<section>
+				<h3>SmileHistory</h3>
 				<div class="history">
 					<table>
 						<thead><th colspan="7">January</th></thead>
@@ -65,15 +72,17 @@
 					</table>
 					<table>
 						<thead><th colspan="7">March</th></thead>
-						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
-						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
+						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td style="background-color: orange;" /><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td style="background-color:green;" /><td style="background-color:lightgreen;" /><td style="background-color:lightgreen;" /><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
 						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
 					</table>
-				</div>			</section>
+				</div>
+				<table<tr><th>Color Scale</th><td style="background-color:red;" /><td style="background-color:orange;" /><td style="background-color:gold;" /><td style="background-color:lightgreen;"/><td style="background-color:green;" /></tr><table>
+			</section>
 		</main>
 	<script src="scripts/auth.js"></script>
 	</body>
