--- a/dashboard.html
+++ b/dashboard.html
@@ -52,12 +52,12 @@
 				<div class="history">
 					<table>
 						<thead><th colspan="7">January</th></thead>
-						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
+						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td style="background-color: orange;" /><td/><td style="background-color:orange;" /><td/></tr>
 						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
-						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td style="background-color:orange;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
+						<tr><th>Thu</th><td/><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td style="background-color:green;" /><td style="background-color:greenyellow;" /><td style="background-color:lightgreen;" /><td/><td/></tr>
 						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
 					</table>
 					<table>
@@ -73,7 +73,7 @@
 					<table>
 						<thead><th colspan="7">March</th></thead>
 						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td style="background-color: orange;" /><td/><td/><td/></tr>
-						<tr><th>Tue</th><td/><td/><td style="background-color:green;" /><td style="background-color:lightgreen;" /><td style="background-color:lightgreen;" /><td/></tr>
+						<tr><th>Tue</th><td/><td/><td style="background-color:green;" /><td style="background-color:greenyellow;" /><td style="background-color:lightgreen;" /><td/></tr>
 						<tr><th>Wed</th><td/><td/><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
 						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
@@ -81,7 +81,15 @@
 						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
 					</table>
 				</div>
-				<table<tr><th>Color Scale</th><td style="background-color:red;" /><td style="background-color:orange;" /><td style="background-color:gold;" /><td style="background-color:lightgreen;"/><td style="background-color:green;" /></tr><table>
+				<div class="legend">
+					<p>Color Scale:</p>
+					<square style="background-color: red;"></square>
+					<square style="background-color: orange;"></square>
+					<square style="background-color: gold;"></square>
+					<square style="background-color: greenyellow;"></square>
+					<square style="background-color: lightgreen;"></square>
+					<square style="background-color: green;"></square>
+				</div>
 			</section>
 		</main>
 	<script src="scripts/auth.js"></script>
