Testing SmileHistory Tooltips

--- a/dashboard.html
+++ b/dashboard.html
@@ -83,12 +83,12 @@
 				</div>
 				<div class="legend">
 					<p>Color Scale:</p>
-					<square style="background-color: red;"></square>
-					<square style="background-color: orange;"></square>
-					<square style="background-color: gold;"></square>
-					<square style="background-color: greenyellow;"></square>
-					<square style="background-color: lightgreen;"></square>
-					<square style="background-color: green;"></square>
+					<square style="background-color: red;" title="0% Happy"></square>
+					<square style="background-color: orange;" title="20% Happy"></square>
+					<square style="background-color: gold;" title="40% Happy"></square>
+					<square style="background-color: greenyellow;" title="60% Happy"></square>
+					<square style="background-color: lightgreen;" title="80% Happy"></square>
+					<square style="background-color: green;" title="100% Happy"></square>
 				</div>
 			</section>
 		</main>
