Added display name and made some other small changes.

--- a/dashboard.html
+++ b/dashboard.html
@@ -36,9 +36,10 @@
 			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
 			<h1>VibeCheck</h1>
 			</div>
-			<nav><button id="logout_button">Log Out</button></nav>
+			<nav><button id="logout_button">Exit Dashboard</button></nav>
 		</header>
 		<main>
+			<h2>Good morning <span id="name_text"></span>!</h2>
 			<section>
 				<h3>DailyVibe</h3>
 				<button>Submit</button>
@@ -93,5 +94,6 @@
 			</section>
 		</main>
 	<script src="scripts/auth.js"></script>
+	<script src="scripts/profile.js"></script>
 	</body>
 </html>
