--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
 			<h1>VibeCheck</h1>
 			</div>
-			<nav><button commandfor="auth_box" command="show-modal">Log In / Sign Up</button></nav>
+			<nav><button commandfor="auth_box" command="show-modal">Enter Dashboard</button></nav>
 		</header>
 		<main>
 			<dialog id="auth_box" closedby="closerequest">
-				<h3>Log In / Sign Up</h3>
+				<h3>Dashboard</h3>
 				<div>
 					<input type="email" id="email_input" placeholder="Email" />
 					<input type="password" id="password_input" placeholder="Password" />
@@ -52,5 +52,6 @@
 			</dialog>
 		</main>
 	<script src="scripts/auth.js"></script>
+	<script src="scripts/profile.js"></script>
 	</body>
 </html>
