--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,10 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
+		<script type="module" src="/scripts/supabase.js" defer></script>
+		<script type="module" src="/scripts/auth.js" defer></script>
+		<script type="module" src="/scripts/profile.js" defer></script>
+
 		<title>VibeCheck Dashboard</title>
 		<meta name="application-name" content="VibeCheck" />
 		<meta name="description" content="Track your Happiness with Vibe Check and get Suggestions on how to improve it!" />
@@ -93,7 +97,5 @@
 				</div>
 			</section>
 		</main>
-	<script src="scripts/auth.js"></script>
-	<script src="scripts/profile.js"></script>
 	</body>
 </html>
