Accessibility changes to HTML.

--- a/dashboard.html
+++ b/dashboard.html
@@ -36,11 +36,13 @@
 	</head>
 	<body>
 		<header>
-			<div>
-			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
-			<h1>VibeCheck</h1>
+			<div class="brand">
+				<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
+				<h1>VibeCheck</h1>
 			</div>
-			<nav><button id="logout_button">Exit Dashboard</button></nav>
+			<nav>
+				<button id="sign_out_button">Exit Dashboard</button>
+			</nav>
 		</header>
 		<main>
 			<h2>Good morning <span id="name_text"></span>!</h2>
