--- a/index.html
+++ b/index.html
@@ -36,24 +36,31 @@
 	</head>
 	<body>
 		<header>
-			<div>
-			<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
-			<h1>VibeCheck</h1>
+			<div class="brand">
+				<img src="/content/symbol.svg" alt="Vibey our smiley face icon.">
+				<h1>VibeCheck</h1>
 			</div>
-			<nav><button commandfor="auth_box" command="show-modal">Enter Dashboard</button></nav>
+			<nav>
+				<button commandfor="auth_box" command="show-modal">Enter Dashboard</button>
+			</nav>
 		</header>
 		<main>
-			<dialog id="auth_box" closedby="closerequest">
-				<h3>Dashboard</h3>
-				<div>
-					<input type="email" id="email_input" placeholder="Email" />
-					<input type="password" id="password_input" placeholder="Password" />
-				</div>
-					<button id="login_button">Log In</button>
-					<button id="signup_button">Sign Up</button>
-					<button commandfor="auth_box" command="close">Cancel</button>
-					<p id="message_text"></p>
-			</dialog>
 		</main>
+		<footer>
+		</footer>
+		<dialog id="auth_box" closedby="closerequest">
+			<h3>Dashboard</h3>
+			<output id="message_text"></output>
+			<div class="flex-column">
+				<input type="email" id="email_input" placeholder="Email" />
+				<input type="password" id="password_input" placeholder="Password" />
+				<input type="text" id="name_input" placeholder="First Name" />
+			</div>
+			<div>
+				<button id="sign_in_button">Sign In</button>
+				<button id="sign_up_button">Sign Up</button>
+			</div>
+			<button class="close" commandfor="auth_box" command="close">Close</button>
+		</dialog>
 	</body>
 </html>
