--- a/dashboard.html
+++ b/dashboard.html
@@ -42,7 +42,7 @@
 			</div>
 			<nav>
 				<button commandfor="profile_dialog" command="show-modal">Profile</button>
-				<button id="sign_out_button">Exit Dashboard</button>
+				<button id="sign_out_button">Sign Out</button>
 			</nav>
 		</header>
 		<main>
@@ -60,43 +60,42 @@
 				<div class="history">
 					<table>
 						<thead><th colspan="7">January</th></thead>
-						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td style="background-color: orange;" /><td/><td style="background-color:orange;" /><td/></tr>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Wed</th><td/><td style="background-color:orange;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
-						<tr><th>Thu</th><td/><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Sat</th><td/><td style="background-color:green;" /><td style="background-color:greenyellow;" /><td style="background-color:lightgreen;" /><td/><td/></tr>
-						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
 					</table>
 					<table>
 						<thead><th colspan="7">February</th></thead>
-						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td/><td/><td/><td/></tr>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Wed</th><td/><td style="background-color:lightgreen;" /><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
-						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
 					</table>
 					<table>
 						<thead><th colspan="7">March</th></thead>
-						<tr><th>Mon</th><td style="background-color:lightgreen;" /><td/><td style="background-color: orange;" /><td/><td/><td/></tr>
-						<tr><th>Tue</th><td/><td/><td style="background-color:green;" /><td style="background-color:greenyellow;" /><td style="background-color:lightgreen;" /><td/></tr>
-						<tr><th>Wed</th><td/><td/><td/><td/><td style="background-color:green;" /><td style="background-color:gold;" /></tr>
-						<tr><th>Thu</th><td style="background-color:orange;" /><td style="background-color:red;"/><td style="background-color:lightgreen;" /><td/><td/><td/></tr>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
-						<tr><th>Sun</th><td/><td style="background-color:green;" /><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
 					</table>
 				</div>
-				<div class="legend">
-					<p>Color Scale:</p>
-					<square style="background-color: red;" title="0% Happy"></square>
-					<square style="background-color: orange;" title="20% Happy"></square>
-					<square style="background-color: gold;" title="40% Happy"></square>
-					<square style="background-color: greenyellow;" title="60% Happy"></square>
-					<square style="background-color: lightgreen;" title="80% Happy"></square>
-					<square style="background-color: green;" title="100% Happy"></square>
+				<div class="legend">"Color Scale:"
+					<square class="level-1" title="0% Happy"></square>
+					<square style="background-color: var(--level-2)" title="20% Happy"></square>
+					<square style="background-color: var(--level-3)" title="40% Happy"></square>
+					<square style="background-color: var(--level-4);" title="60% Happy"></square>
+					<square style="background-color: var(--level-5);" title="80% Happy"></square>
+					<square style="background-color: var(--level-6);" title="100% Happy"></square>
 				</div>
 			</section>
 		</main>
