Many visual fixes.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 			</nav>
 		</header>
 		<main>
+			<section>
+				<p>Track your Happiness with Vibe Check and get Suggestions on how to improve it!</p>
+			</section>
 		</main>
 		<footer>
 		</footer>
