--- a/dashboard.html
+++ b/dashboard.html
@@ -88,8 +88,98 @@
 						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
 						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
 					</table>
+					<table>
+						<thead><th colspan="7">April</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">May</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">June</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">July</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">August</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">September</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">October</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">November</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
+					<table>
+						<thead><th colspan="7">December</th></thead>
+						<tr><th>Mon</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Tue</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Wed</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Thu</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Fri</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sat</th><td/><td/><td/><td/><td/><td/></tr>
+						<tr><th>Sun</th><td/><td/><td/><td/><td/><td/></tr>
+					</table>
 				</div>
-				<div class="legend">"Color Scale:"
+				<div class="legend">Scale:
 					<square class="level-1" title="0% Happy"></square>
 					<square style="background-color: var(--level-2)" title="20% Happy"></square>
 					<square style="background-color: var(--level-3)" title="40% Happy"></square>
