Temporary hotfix for dialogs on index.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</main>
 		<footer>
 		</footer>
-		<dialog id="auth_dialog" closedby="closerequest">
+		<dialog id="auth_dialog" closedby="closerequest" open>
 			<h3>Dashboard</h3>
 			<output id="message_text"></output>
 			<div class="flex-column">
