--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,7 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 		<script type="module" src="/scripts/supabase.js" defer></script>
+		<script type="module" src="/scripts/main.js" defer></script>
 		<script type="module" src="/scripts/auth.js" defer></script>
 		<script type="module" src="/scripts/profile.js" defer></script>
 		
