--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,10 @@
 				<h3>DailyVibe</h3>
 					<div class="flex-column">
 						<label for="happiness_scale">How happy are you?</label>
-						<input id="happiness_scale" type="range" min="0" max="40">
+						<div>
+							<input id="happiness_scale" type="range" min="0" max="40">
+							<p id="happiness_scale_number">5/10</p>
+						</div>
 					</div>
 				<button id="submit_vibe_button" class="button">Submit</button>
 			</section>
