--- a/dashboard.html
+++ b/dashboard.html
@@ -55,7 +55,7 @@
 						<label for="happiness_scale">How happy are you?</label>
 						<div>
 							<input id="happiness_scale" type="range" min="0" max="10">
-							<p id="happiness_scale_number">5/10</p>
+							<span id="happiness_scale_number">5/10</span>
 						</div>
 					</div>
 					<div class="flex-column align-start">
