Visual fixes to header.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<header>
 			<div class="no-margin">
 				<img class="logo" src="/content/symbol.svg" alt="Vibey our smiley face icon.">
-				<h1>VibeCheck</h1>
+				<h1 class="name">VibeCheck</h1>
 			</div>
 			<nav>
 				<button class="button" id="auth_open_button" commandfor="auth_dialog" command="show-modal">Sign In</button>
